[tool.poetry]
name = "repl_python3_Rombot"
version = "0.1.0"
description = "a discord bot"
authors = ["Rômulo Pinheiro <romulopinheirocosta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
google-api-python-client = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
